Fix delete button visibility and improve team selection display

--- a/src/WeeklyList.css
+++ b/src/WeeklyList.css
@@ -89,7 +89,7 @@
 
 .delete-action {
     position: absolute;
-    right: 0;
+    right: -200px;
     top: 0;
     height: 100%;
     width: 200px;
